--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/ws": "^8.5.10",
     "ai": "^3.0.19",
     "axios": "^1.6.8",
+    "chromadb": "^1.8.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.364.0",
+    "mathjs": "^12.4.1",
     "next": "14.1.4",
     "openai": "^4.33.0",
     "react": "^18",
